# FoolsTrailCutting

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml  release.yml
src/: main.cpp
